# TouchInputCalib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc
model/: AppWindowData.cpp  AppWindowData.h  AppWindowModel.cpp  AppWindowModel.h
qml/: MainArea.qml  TouchCircle.qml
src/: Backend.cpp  Backend.h  InputDevice.cpp  InputDevice.h  MainAreaBackend.cpp  MainAreaBackend.h  Mapping.cpp  Mapping.h  Monitor.cpp  Monitor.h
toolchains/: linux-amd64-aarch64.toolchain
